Add internationalization (i18n) support and perform overall updates and bug fixes